--- a/posts/251213grep.md
+++ b/posts/251213grep.md
@@ -33,4 +33,4 @@ grep -R "something" ~/.config 2>/dev/null
 - 일부 파일이 디렉토리나 바이너리라 읽기 불가할 때 에러를 방지합니다
 
 ![[Pasted image 20251220023911.png]]
- 실제 Rose-Pine 테마가 어디에 적용되었는지 찾는 과정
+ (사진: 실제 Rose-Pine 테마가 어디에 적용되었는지 찾는 과정)
