--- a/posts/251205waybar.md
+++ b/posts/251205waybar.md
@@ -1,8 +1,14 @@
 ---
-title: waybar waybar 세팅 하는 법
+title: waybar 세팅 하는 법
 date: 2025-12-05
 type: article
 tags:
   - dev
 ---
 ## waybar config 파일 위치
+```
+~/.config/waybar/config.jsonc
+/home/[user_id]/.config/waybar/config.jsonc
+```
+
+
