--- a/posts/251226paru.md
+++ b/posts/251226paru.md
@@ -19,13 +19,29 @@ paru antigravity
 
 ![[img251227 1.png]]
 
+업데이트에는 다음의 명령어를 추천합니다
+```
+paru -Syu gemini-cli
+```
+
 ### Paru 기본 명령어:
 pacman의 명령과 거의 똑같다고 보면 됩니다 
 
 #### 패키지 검색
+
+로컬 데이터베이스 검색시
+```
+paru -Qs 패키지명 #패키지명 = gemini 
+```
+-Q: 로컬 데이터베이스에서 패키지를 쿼리합니다. 설치된 패키지 목록을 확인할 때 사용합니다
+-s: 검색 모드를 활성화합니다(지정된 패키지 이름이나 키워드를 검색합니다)
+
+원격 저장소 검색시
 ```
 paru -Ss 패키지명
 ```
+-S는 sync를 의미합니다
+동기화: 로컬 패키지 데이터베이스를 원격 저장소와 동기화합니다
 
 #### 패키지 설치
 ```
