--- a/posts/251128ln.md
+++ b/posts/251128ln.md
@@ -88,4 +88,4 @@ readlink -f /path/to/link
   - 심볼릭 링크를 삭제할 때는 `rm` 명령어를 사용합니다. 원본 파일은 삭제되지 않습니다
 
 ## 심볼릭 링크의 수정
-  - 심볼릭 링크를 수정하려면 기존 링크를 삭제하고 새로운 링크를 생성해야 합니다
+  - 심볼릭 링크를 수정하려면 기존 링크를 삭제하고 새로운 링크를 생성해야 합니다6
