--- a/posts/251201swww.md
+++ b/posts/251201swww.md
@@ -6,6 +6,11 @@ tags:
   - dev
 ---
 
+## swww 소개
+
+- swww은 Wayland 환경에서 배경화면을 쉽게 관리할 수 있는 유용한 유틸리티입니다
+- 간단한 명령어로 이미지 파일을 배경화면으로 설정할 수 있으며, 다양한 전환 효과와 다중 모니터 지원을 제공합니다
+
 ## swww 명령어로 이미지 파일 배경화면으로 만들기
 
 ```
@@ -31,4 +36,19 @@ swww img /home/a2/Desktop/wallpaper/iceberg_night.jpg
 chmod +x ~/Desktop/iceb.n.sh
 ```
 
+## hyprland에서 사용법은?
 
+```
+~/.config/hypr/hyprland.conf
+```
+위의 hyprland 설정파일에서
+다음 한 줄을 추가해 준다 
+
+```
+exec-once = swww-daemon --no-cache
+(...)
+exec-once = swww img ~/이미지/파일/경로/파일.png 
+```
+
+daemon 실행과 이미지 배경화면 지정은 다른 명령어들 사이에 두고 실행합니다 
+(시간차를 두고 실행하여 오류 방지)
