--- a/posts/251128ln.md
+++ b/posts/251128ln.md
@@ -7,11 +7,9 @@ tags:
 ---
 
 ## 리눅스에서 무언가 설치했는데 실행이 안된다 (명령어:ln)
-
 심볼릭링크가 없어서 작동하지 않을 확률이 높습니다
 
 ## 심볼릭링크 만들기
-
 실제 예시
 ```
 sudo ln -s /opt/google/chrome/google-chrome /usr/bin/chrome
@@ -28,14 +26,15 @@ ln 명령어는 link의 약어입니다
  ```
  
 ## 강제 덮어쓰기
-
 ```
 ln -sf /new/path/program /usr/bin/program
 ```
 
+## 심볼릭 링크의 사용 예시
+  - 여러 버전의 프로그램을 관리할 때 유용합니다. 예를 들어, `/usr/bin/program`을 `/opt/program/v1.0/bin/program`으로 연결하여 버전을 쉽게 관리할 수 있습니다
+  - 호환성을 유지하기 위해 `/usr/bin/python`을 `/usr/bin/python3`으로 연결하여 기존 스크립트가 새로운 버전의 파이썬을 사용할 수 있도록 할 수 있습니다
 
 ## 하드 링크 생성
-
 ```
 ln original.txt hardlink.txt
 ```
@@ -44,48 +43,38 @@ ln original.txt hardlink.txt
 - 특히 /usr/bin/과 같은 시스템 경로에 심볼릭 링크를 만들어 사용자가 쉽게 접근할 수 있도록 하는 데 자주 사용됩니다
 
 ## 여러 파일 한 번에 링크 생성
-
 ```
 ln -s /path/to/files/* /destination/
 ```
 
 ## 상대 경로로 심볼릭 링크 생성 (이동 시 유용)
-
 ```
 ln -s ../real/file linkname
 ```
 
 ## 백업용 하드 링크 생성
-
 ```
 ln original.txt backup.txt
 ```
 
 ## 심볼릭 링크와 하드 링크의 차이점
-  - 심볼릭 링크는 원본 파일의 경로를 가리키는 파일입니다. 원본 파일이 삭제되면 심볼릭 링크는 깨집니다.
-  - 하드 링크는 원본 파일과 동일한 inode를 가리키며, 원본 파일이 삭제되어도 하드 링크는 유효합니다.
+  - 심볼릭 링크는 원본 파일의 경로를 가리키는 파일입니다. 원본 파일이 삭제되면 심볼릭 링크는 깨집니다
+  - 하드 링크는 원본 파일과 동일한 inode를 가리키며, 원본 파일이 삭제되어도 하드 링크는 유효합니다
 
 ## 심볼릭 링크의 실제 경로 확인
-
 ```
 readlink -f /path/to/link
 ```
 
 
-## 심볼릭 링크의 권한
-  - 심볼릭 링크의 권한은 원본 파일의 권한에 따라 결정됩니다.
-
-## 심볼릭 링크의 사용 예시
-
-  - 여러 버전의 프로그램을 관리할 때 유용합니다. 예를 들어, `/usr/bin/program`을 `/opt/program/v1.0/bin/program`으로 연결하여 버전을 쉽게 관리할 수 있습니다
-  - 호환성을 유지하기 위해 `/usr/bin/python`을 `/usr/bin/python3`으로 연결하여 기존 스크립트가 새로운 버전의 파이썬을 사용할 수 있도록 할 수 있습니다
-
 ## 심볼릭 링크의 삭제
-
 ```
   rm /path/to/link
 ```
   - 심볼릭 링크를 삭제할 때는 `rm` 명령어를 사용합니다. 원본 파일은 삭제되지 않습니다
 
 ## 심볼릭 링크의 수정
-  - 심볼릭 링크를 수정하려면 기존 링크를 삭제하고 새로운 링크를 생성해야 합니다6
+  - 심볼릭 링크를 수정하려면 기존 링크를 삭제하고 새로운 링크를 생성해야 합니다
+
+## 심볼릭 링크의 권한
+  - 심볼릭 링크의 권한은 원본 파일의 권한에 따라 결정됩니다
