--- a/posts/260110hwx80.md
+++ b/posts/260110hwx80.md
@@ -3,10 +3,10 @@ title: EL-ESPORTS X80 키보드 LED 설정
 date: 2026-01-10
 type: article
 tags:
-  - trading
   - HW
   - setting
   - X80
+  - dev
 ---
 
 ### X80 키보드 LED 설정
