--- a/posts/251124noeasy.md
+++ b/posts/251124noeasy.md
@@ -1,6 +1,6 @@
 ---
 title: 양떼 효과
-date: 2026-01-13
+date: 2025-11-24
 type: article
 tags:
   - trading
@@ -8,37 +8,26 @@ tags:
 
 ### 적당히 모으고 적당히 덜어내고 대신 수익은 끝까지 물고 늘어지자
 
-항상 바닥에서 사서 고점에서 파는 게 고수라고 생각했습니다
-
-나는 왜 그런 기술이 없을까 한탄을 했습니다
-
+예전에는 바닥에서 사서 고점에서 파는 게 고수라고 생각했습니다
+나는 왜 그런 기술이 없을까 한탄을 했습니다 
 ​
-
 나이를 먹고
-
 이리저리 구르고 부딪히며 깨지다 보니
-
 어느 순간 그런 생각이 들었습니다
 
-​
 
-'이게 다 내 욕심이었구나...'
+'이게 다 내 욕심이었구나..'
 
-​
 
 적당한 가격이라고 생각하면 조금씩 도토리가 겨울을 준비하듯 모아나가면 될 것 같습니다
-
 가격이 너무 올라 마음이 불편하면 조금 덜어 내어도 좋습니다
 
-​
-
 대신 수익은 되도록이면 오랫동안 끈질기게 물고 늘어져 볼 예정입니다
-
 ​
-
 언젠가 두더지가 땅 밖으로 기어 나오는 날이 올 때까지...
 
-
+-
+과거 2024년 초에 써 놓았던 글을 다시 정리하여 올립니다 
 
 
 
