--- a/posts/251124noeasy.md
+++ b/posts/251124noeasy.md
@@ -1,5 +1,5 @@
 ---
-title: 양떼 효과
+title: 적당하게 사고 적당하게 팔고
 date: 2025-11-24
 type: article
 tags:
@@ -23,8 +23,7 @@ tags:
 가격이 너무 올라 마음이 불편하면 조금 덜어 내어도 좋습니다
 
 대신 수익은 되도록이면 오랫동안 끈질기게 물고 늘어져 볼 예정입니다
-​
-언젠가 두더지가 땅 밖으로 기어 나오는 날이 올 때까지...
+​게언젠가 두더지가 땅 밖으로 기어 나오는 날이 올 때까지...
 
 -
 과거 2024년 초에 써 놓았던 글을 다시 정리하여 올립니다 
