--- a/posts/260120ss.md
+++ b/posts/260120ss.md
@@ -28,16 +28,16 @@ tags:
 26년 1월달의 삼성전자 차트인데 무언가 느껴지십니까?
 
 중요!
-나중에 계속 보기전에 반드시 이해하고 넘어가야 하는 부분이 있습니다
+반드시 이해하고 넘어가야 하는 부분이 있습니다
 
 >후행적으로 차트를 볼시에는 과거의 변화들이 매우 작게 나타납니다 
->가격 1억에서 100만원 단위 변화는 미세하지만 
->가격 10만원에서 5만원 다위 변화도 엄청납니다 
-
+>가격 1억에서 100만원 단위 변화는 미묘하지만 
+>가격 10만원에서 5만원 단위 변화는 엄청납니다 
 
 #### 2. 투자자들 간의 의견 차이
 
-차트가 살짝 힘이 빠지는 순간, 투자자들간의 의견은 갈립니다
+차트가 살짝 힘이 빠지는 순간
+투자자들간의 의견은 갈립니다
 (의견이 일치하면 아무도 안팔고 거래가 일어나지 않을 겁니다 )
 
 - 눌림목: 일시적인 조정 후 다시 상승할 것
